--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -876,7 +876,7 @@ document.addEventListener('alpine:init', () => {
       "type": "link_list",
       "id": "menu_mobile",
       "label": "Menu Mobile",
-      "default": "menu-mobile"
+      "default": "main-menu"
     }
   ],
   "presets": [
