--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -6,83 +6,44 @@
 <img src="{{ 'Faroush-light-yellow.svg' | asset_url }}" loading="lazy" alt="" class="nav_logo">
 {% endif %}</a>
     <nav role="navigation" id="w-node-_9132635a-7891-b0d1-9b20-ecb0d5a86dfd-d5a86df8" class="nav_menu is-page-height-tablet w-nav-menu">
-      
-      {%- comment -%} MENU MOBILE UNIQUEMENT {%- endcomment -%}
-      <div class="nav_menu-mobile-only">
-        {% for link in linklists[section.settings.menu_mobile].links %}    
-        <div data-hover="true" data-delay="200" li-for="link in linklists[section.settings.menu_mobile].links" class="nav_menu-dropdown w-dropdown">
-          <div class="nav_dropdown-toggle w-dropdown-toggle">
-            {% if link.links.size > 0 %}    
-            <div li-if="link.links.size > 0" class="dropdown-icon w-embed">
-              <svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M2.55806 6.29544C2.46043 6.19781 2.46043 6.03952 2.55806 5.94189L3.44195 5.058C3.53958 4.96037 3.69787 4.96037 3.7955 5.058L8.00001 9.26251L12.2045 5.058C12.3021 4.96037 12.4604 4.96037 12.5581 5.058L13.4419 5.94189C13.5396 6.03952 13.5396 6.19781 13.4419 6.29544L8.17678 11.5606C8.07915 11.6582 7.92086 11.6582 7.82323 11.5606L2.55806 6.29544Z" fill="currentColor"></path>
-              </svg>    
+      {% for link in linklists[section.settings.menu].links %}    <div data-hover="true" data-delay="200" li-for="link in linklists[section.settings.menu].links" class="nav_menu-dropdown w-dropdown">
+                            
+        
+                    <div class="nav_dropdown-toggle w-dropdown-toggle">
+          {% if link.links.size > 0 %}    <div li-if="link.links.size > 0" class="dropdown-icon w-embed">
+<svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M2.55806 6.29544C2.46043 6.19781 2.46043 6.03952 2.55806 5.94189L3.44195 5.058C3.53958 4.96037 3.69787 4.96037 3.7955 5.058L8.00001 9.26251L12.2045 5.058C12.3021 4.96037 12.4604 4.96037 12.5581 5.058L13.4419 5.94189C13.5396 6.03952 13.5396 6.19781 13.4419 6.29544L8.17678 11.5606C8.07915 11.6582 7.92086 11.6582 7.82323 11.5606L2.55806 6.29544Z" fill="currentColor"></path>
+            </svg>    </div>
+{% endif %}
+          <a li-object:href="link.url" href="{{ link.url }}" class="w-inline-block">
+            <div>
+              <div li-object="link.title">{{ link.title }}</div>
             </div>
-            {% endif %}
-            <a li-object:href="link.url" href="{{ link.url }}" class="w-inline-block">
-              <div>
-                <div li-object="link.title">{{ link.title }}</div>
-              </div>
-            </a>
-          </div>
-          
-          {% if link.links.size > 0  %}    
-          <nav li-if="link.links.size > 0 " class="nav_dropdown-list w-dropdown-list">
-            {% for child_link in link.links %}    
-            <a href="{{ child_link.url }}" li-object="child_link.title" li-object:href="child_link.url" class="nav_dropdown-link w-dropdown-link">{{ child_link.title }}</a>
-            
-            {% if child_link.links.size > 0 %}    
-            <div li-if="child_link.links.size > 0" class="nav_dropdown-children">
-              {% for grandchild_link in child_link.links %}    
-              <a href="{{ grandchild_link.url }}" li-object="grandchild_link.title" li-object:href="grandchild_link.url" class="nav_dropdown-link_child w-dropdown-link">{{ grandchild_link.title }}</a>
-              {% endfor %}
-            </div>
-            {% endif %}
-            {% endfor %}
-          </nav>
-          {% endif %}
+          </a>
         </div>
-        {% endfor %}
-      </div>
+                    
+        {% if link.links.size > 0  %}    <nav li-if="link.links.size > 0 " class="nav_dropdown-list w-dropdown-list">
+
+          {% for child_link in link.links %}    
+                    <a href="{{ child_link.url }}" li-object="child_link.title" li-object:href="child_link.url" class="nav_dropdown-link w-dropdown-link">{{ child_link.title }}</a>
+                    
+                    {% if child_link.links.size > 0 %}    <div li-if="child_link.links.size > 0" class="nav_dropdown-children">
+
+                    {% for grandchild_link in child_link.links %}    
+                      
+                    <a href="{{ grandchild_link.url }}" li-object="grandchild_link.title" li-object:href="grandchild_link.url" class="nav_dropdown-link_child w-dropdown-link">{{ grandchild_link.title }}</a>
+                    
+                {% endfor %}
+                      </div>
+{% endif %}
+                    
+                {% endfor %}
+            </nav>
+{% endif %}
+                    
       
-      {%- comment -%} MENU DESKTOP UNIQUEMENT {%- endcomment -%}
-      <div class="nav_menu-desktop-only">
-        {% for link in linklists[section.settings.menu].links %}    
-        <div data-hover="true" data-delay="200" li-for="link in linklists[section.settings.menu].links" class="nav_menu-dropdown w-dropdown">
-          <div class="nav_dropdown-toggle w-dropdown-toggle">
-            {% if link.links.size > 0 %}    
-            <div li-if="link.links.size > 0" class="dropdown-icon w-embed">
-              <svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M2.55806 6.29544C2.46043 6.19781 2.46043 6.03952 2.55806 5.94189L3.44195 5.058C3.53958 4.96037 3.69787 4.96037 3.7955 5.058L8.00001 9.26251L12.2045 5.058C12.3021 4.96037 12.4604 4.96037 12.5581 5.058L13.4419 5.94189C13.5396 6.03952 13.5396 6.19781 13.4419 6.29544L8.17678 11.5606C8.07915 11.6582 7.92086 11.6582 7.82323 11.5606L2.55806 6.29544Z" fill="currentColor"></path>
-              </svg>    
-            </div>
-            {% endif %}
-            <a li-object:href="link.url" href="{{ link.url }}" class="w-inline-block">
-              <div>
-                <div li-object="link.title">{{ link.title }}</div>
-              </div>
-            </a>
-          </div>
-          
-          {% if link.links.size > 0  %}    
-          <nav li-if="link.links.size > 0 " class="nav_dropdown-list w-dropdown-list">
-            {% for child_link in link.links %}    
-            <a href="{{ child_link.url }}" li-object="child_link.title" li-object:href="child_link.url" class="nav_dropdown-link w-dropdown-link">{{ child_link.title }}</a>
-            
-            {% if child_link.links.size > 0 %}    
-            <div li-if="child_link.links.size > 0" class="nav_dropdown-children">
-              {% for grandchild_link in child_link.links %}    
-              <a href="{{ grandchild_link.url }}" li-object="grandchild_link.title" li-object:href="grandchild_link.url" class="nav_dropdown-link_child w-dropdown-link">{{ grandchild_link.title }}</a>
-              {% endfor %}
-            </div>
-            {% endif %}
-            {% endfor %}
-          </nav>
-          {% endif %}
-        </div>
-        {% endfor %}
-      </div>
-      
+                </div>
+{% endfor %}
     </nav>
     <div class="nav_shop-icons">
       <div class="nav_search">
@@ -627,15 +588,8 @@ document.addEventListener('alpine:init', () => {
     width: 100% !important;
 }
 
-/* Affichage conditionnel des menus Desktop vs Mobile */
+/* Hover interaction pour desktop uniquement */
 @media (min-width: 992px) {
-    .nav_menu-mobile-only {
-        display: none !important;
-    }
-    .nav_menu-desktop-only {
-        display: flex !important;
-    }
-    
     .nav_dropdown-link:hover {
         opacity: 0.7 !important;
         color: #6e612b !important;
@@ -650,13 +604,13 @@ document.addEventListener('alpine:init', () => {
         position: relative !important;
     }
 
-    /* Centrage réel du menu desktop */
+    /* --- MODIF OPTION 1 (Grid) : centrage réel du menu --- */
     .nav_container{
         display: grid !important;
-        grid-template-columns: auto 1fr auto;
+        grid-template-columns: auto 1fr auto; /* logo | menu | icônes */
         align-items: center !important;
         gap: 1rem;
-        position: relative;
+        position: relative; /* pour les dropdowns absolus */
     }
     .nav_menu{
         justify-self: center !important;
@@ -670,13 +624,6 @@ document.addEventListener('alpine:init', () => {
 
 /* Mobile styles */
 @media (max-width: 991px) {
-    .nav_menu-mobile-only {
-        display: block !important;
-    }
-    .nav_menu-desktop-only {
-        display: none !important;
-    }
-    
     .nav_dropdown-list {
         position: static !important;
         display: none !important;
@@ -869,13 +816,7 @@ document.addEventListener('alpine:init', () => {
     {
       "type": "link_list",
       "id": "menu",
-      "label": "Menu Desktop",
-      "default": "main-menu"
-    },
-    {
-      "type": "link_list",
-      "id": "menu_mobile",
-      "label": "Menu Mobile",
+      "label": "Menu",
       "default": "main-menu"
     }
   ],
